fix letter-spacing

--- a/common.css
+++ b/common.css
@@ -27,9 +27,9 @@
     font-family: var(--main-font), sans-serif;
     color: var(--primery-white-coloc);
     background-color: var(--accent-color);
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 16px;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
     line-height: 1.88;
     border-radius: 4px;
     border: 1px solid transparent;
@@ -92,15 +92,15 @@ color: var(--primery-white-coloc);
     font-weight: 700;
     font-size: 14px;
     font-family: var(--main-font);
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 
 .text-benefits {
     font-family: var(--main-font);
-    Font-size: 16px;
-    Line-height: 1.71;
-    Letter-spacing: 3%;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 
 /* about*/
@@ -112,7 +112,7 @@ color: var(--primery-white-coloc);
 .section-title{
     margin-bottom: 50px;
     color: var(--title-text-coloc);
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
@@ -151,7 +151,7 @@ color: var(--primery-white-coloc);
 .title-smaller {
     margin-bottom: 10px;
     color: var(--title-text-coloc);
-    font-weight: 500px;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
@@ -206,12 +206,11 @@ color: var(--primery-white-coloc);
 }
 
 .title-portfolio {
-    padding-top: 20px;
     margin-bottom: 4px;
     color: var(--title-text-coloc);
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 18px;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
 }
 
 .border-portfolio {
@@ -226,8 +225,8 @@ color: var(--primery-white-coloc);
 
 .text-portfolio{
     font-family: var(--main-font);
-    Font-size: 16px;
-    font-weight: 400px;
-    Line-height: 1.8;
-    Letter-spacing: 3%;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
